--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.474.0",
     "my-project": "file:",
     "next": "15.1.6",
