--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.474.0",
